# kit

./: .gitignore  .replit  CHANGELOG.md  CONFIGURATION.EN.md  CONFIGURATION.ID.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  promt.txt  rustfmt.toml
Doc/: CONFIGURATION.EN.md  CONFIGURATION.ID.md  THEMES.EN.md  THEMES.ID.md
assets/: create.sh
assets/completions/: _kit.ps1.in  kit.bash.in  kit.fish.in  kit.zsh.in
assets/manual/: kit.1.in
assets/syntaxes/02_Extra/: Assembly (x86_64).sublime-syntax  Crystal.sublime-syntax  HTML (Twig).sublime-syntax  Lean.sublime-syntax  PowerShell.sublime-syntax  Slim.sublime-syntax  TypeScript.sublime-syntax  TypsecriptReact.sublime-syntax  syntax_test_helphelp.txt
assets/themes/: ansi.tmTheme  base16.tmTheme
assets/themes/Catppuccin/: README.md
attached_assets/: promt_1762253729130.txt
diagnostics/: info.sh
examples/: buffer.rs  inputs.rs  list_syntaxes_and_themes.rs  simple.rs  yaml.rs
src/: input.rs  macros.rs  output.rs  pager.rs  printer.rs
src/assets/: assets_metadata.rs  lazy_theme_set.rs  serialized_syntax_set.rs
tests/: assets.rs  integration_tests.rs  no_duplicate_extensions.rs  snapshot_tests.rs  system_wide_config.rs  test_pretty_printer.rs
tests/benchmarks/: run-benchmarks.sh
tests/examples/: kit-windows.conf
tests/scripts/: find-slow-to-highlight-files.py  license-checks.sh
tests/snapshots/: generate_snapshots.py
tests/syntax-tests/: KitTestCustomAssets.sublime-syntax  create_highlighted_versions.py  test_custom_assets.sh
tests/syntax-tests/source/CMake/: CMakeLists.txt
(+276 files in other folders)
